@@ -75,7 +75,8 @@ static void innards(const uchar *buf, int X, int Y, int W, int H,
     lut = CGColorSpaceCreateDeviceRGB();
   CGDataProviderRef src = CGDataProviderCreateWithData( 0L, array, linedelta*H, 0L);
   CGImageRef        img = CGImageCreate( W, H, 8, 8*delta, linedelta,
-                            lut, delta&1?kCGImageAlphaNone:kCGImageAlphaNoneSkipLast,
+                            //lut, delta&1?kCGImageAlphaNone:kCGImageAlphaNoneSkipLast,
+                            lut, delta&1?kCGImageAlphaNone:kCGImageAlphaLast,
                             src, 0L, false, kCGRenderingIntentDefault);
   // draw the image into the destination context
   if (img) {
