@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.3.0
 
-	- Added improved OS X cursor control to Fl_Input (STR #2169)
+	- Fixed fl_draw_image to obey the alpha channel, hoping that 
+	  this has no adverse effect on existing software (OS X only)
+	- Added OS X cursor control to Fl_Input (STR #2169)
 	- Fix for multiple popups, when dragging and calling fl_alert()
 	  and friends from the callback (STR #2159)
 	- Avoiding crashes for recursive common dialogs (this does not 
